# Bicycle-Speedometer

./: README.md
Mobile_app2/Ble.Client/Views/: BtCharPage.xaml.cs
Speedometer_proj/components/adc_sensor/: CMakeLists.txt  adc_sensor.c
Speedometer_proj/components/adc_sensor/include/: adc_sensor.h
Speedometer_proj/components/nimBLE/: CMakeLists.txt  nimBLE.c
Speedometer_proj/components/nimBLE/include/: nimBLE.h
Speedometer_proj/main/: Speedometer.c
